# rules_go

examples/hello/: MODULE.bazel  README.md  flake.nix
examples/hello/patches/: BUILD  rules_go_binary_hermetic.patch
