# A MODULE.bazel marks the root directory of a Bazel workspace.
#
# Its main purpose is to declare external dependencies on other
# Bazel modules (by default, from registry.bazel.build).

module(name = "hello")

# A bazel_dep declaration is needed for each direct dependency
# of this module. We need rules_go since it's not built into Bazel.
bazel_dep(name = "rules_go", version = "0.52.0")

# We use rules_go's go_sdk module extension to download and configure
# the Go toolchain and standard library. To ensure a deterministic build,
# Bazel typically uses the Go toolchain downloaded here instead of
# one installed on the host machine.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# Only modification to the MODULE.bazel file
#--------------------- LLVM Toolchain ------------------------
#
bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

SYSROOT_BUILD_CONTENT = """
filegroup(
    name = "sysroot",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive(
    name = "sysroot_linux_x64",
    build_file_content = SYSROOT_BUILD_CONTENT,
    sha256 = "5df5be9357b425cdd70d92d4697d07e7d55d7a923f037c22dc80a78e85842d2c",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/4f611ec025be98214164d4bf9fbe8843f58533f7/debian_bullseye_amd64_sysroot.tar.xz"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {
        "19.1.6": "c++23",
    },
    llvm_versions = {
        "linux-x86_64": "19.1.6",
    },
    sha256 = {
        "linux-x86_64": "d55dcbb309de7ade4e3073ec3ac3fac4d3ff236d54df3c4de04464fe68bec531",
    },
    stdlib = {
        "linux-x86_64": "stdc++",
    },
    strip_prefix = {
        "linux-x86_64": "LLVM-19.1.6-Linux-X64",
    },
    urls = {
        "linux-x86_64": [
            "https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.6/LLVM-19.1.6-Linux-X64.tar.xz",
        ],
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_x64//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)
